cambio imagen y descripcion

--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
                     <br> Vicente Stuardo
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Joven de 18 años, estudiante de psicología y programación FullStack, Serenense, Amante de la musica y su producción, de la fotografía y de los videojuegos.
+                    Con facilidad para aprender intuitivamente y con ganas de mejorar sus conocimientos siempre.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
