--- a/index.html
+++ b/index.html
@@ -101,19 +101,16 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3 bg">Mis trabajos</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top imagencarta" style="background-image: url(assets/img/curriculum.PNG)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Curriculum</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Primer desafío en el cual conociamos html de forma basica para hacer algo simple como un curriculum vitae
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -123,14 +120,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top imagencarta" style="background-image: url(assets/img/cuppon.PNG)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Cuppon</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Desafío en el cual se implemento el uso de plantillas de Bootstrap para facilitar la creación y estetica de las paginas, se creo un prototipo de tienda
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -140,14 +134,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top imagencarta" style="background-image: url(assets/img/iguana.PNG)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Iguana</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Desafío en el cual incluiamos el posicionamiento en las paginas web y en el cual se incluye el uso de iconos, se hizo una pagina informativa de las iguanas
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -203,7 +194,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Vicente Stuardo 2023. Todos los derechos reservados.</p>
     </footer>
 
 
